Features (#19)
* support colors and emojis for tags

* timeseries

* rename tags to categories

---------
